--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-friendly-formatter": "^4.0.1",
     "rollup": "^2.58.0",
+    "rollup-plugin-html2": "^3.1.0",
+    "rollup-plugin-htmlparts": "^1.2.1",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "rollup-plugin-bundle-html": "^0.2.2"
   }
 }
