--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2"
-  }
+  },
+  "dependencies": {}
 }
