--- a/public/config.json
+++ b/public/config.json
@@ -180,8 +180,7 @@
   "images": [
     "Characters/hero.png",
     "ground.png",
-    "Battlebacks/mota.jpg",
-    "shop.webp"
+    "Battlebacks/mota.jpg"
   ],
   "sounds": [
     "bgm/area1.mp3",
