--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "rollup -c --environment NODE_ENV:production",
     "start": "rollup -c --environment NODE_ENV:development -w --sourcemap",
-    "lint": "eslint --ext .js,.jsx ."
+    "lint": "eslint --ext .js,.jsx .",
+    "server": "http-server public"
   },
   "license": "MIT",
   "devDependencies": {
@@ -21,6 +22,7 @@
     "eslint": "^7.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-friendly-formatter": "^4.0.1",
+    "http-server": "*",
     "rollup": "^2.58.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-replace": "^2.2.0",
