--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "build": "rollup -c --environment NODE_ENV:production",
     "start": "rollup -c --environment NODE_ENV:development -w --sourcemap",
-    "lint": "eslint --ext .js,.jsx .",
-    "server": "http-server public -p 8010"
+    "lint": "eslint --ext .js,.jsx ."
   },
   "license": "MIT",
   "devDependencies": {
@@ -22,7 +21,6 @@
     "eslint": "^7.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-friendly-formatter": "^4.0.1",
-    "http-server": "*",
     "rollup": "^2.58.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-replace": "^2.2.0",
