--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "http-server": "^14.1.1"
   }
 }
