--- a/public/config.json
+++ b/public/config.json
@@ -14,7 +14,7 @@
     "Escape": "cancel"
   },
   "save": {
-    "mapId": "MT1",
+    "mapId": "MT_START",
     "position": {
       "x": 6,
       "y": 11,
