--- a/public/config.json
+++ b/public/config.json
@@ -6,8 +6,8 @@
     "size": 32
   },
   "save": {
-    "mapId": "MT_START",
     "position": {
+      "map": "MT_START",
       "x": 6,
       "y": 11,
       "sx": 0,
