--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "rollup -c --environment NODE_ENV:development -w --sourcemap",
     "lint": "eslint --ext .js,.jsx -f node_modules/eslint-friendly-formatter ."
   },
+  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/eslint-parser": "^7.16.3",
