--- a/public/config.json
+++ b/public/config.json
@@ -10,7 +10,7 @@
   ],
   "save": {
     "position": {
-      "map": "MT_START",
+      "map": "MT0",
       "x": 6,
       "y": 11,
       "sx": 0,
