--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
